--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/swiper.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     
@@ -188,6 +189,168 @@
             </div>
         </div>
     </section>
+
+    <section class="section rewiews">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h3 class="section-title rewiews-title">
+                        Ваши отзывы о нашей работе
+                    </h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="swiper-container">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-lg-5 offset-lg-1 col-12 offset-0">
+                                            <div class="rewiews-block">
+                                                <h5 class="rewiews-name">Илья Коровин</h5>
+                                                <p class="rewiews-paragraph">Более того, нормальное распределение отображает равновероятный разрыв функции, откуда следует доказываемое равенство. Более того, расходящийся ряд естественно искажает скачок функции. График функции притягивает нормальный график функции многих переменных.</p>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-5 col-12 offset-0">
+                                            <div class="rewiews-block">
+                                                <h5 class="rewiews-name">Илья Коровин</h5>
+                                                <p class="rewiews-paragraph">Более того, нормальное распределение отображает равновероятный разрыв функции, откуда следует доказываемое равенство. Более того, расходящийся ряд естественно искажает скачок функции. График функции притягивает нормальный график функции многих переменных.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                        </div>
+                        <div class="swiper-button-next"></div>
+                        <div class="swiper-button-prev"></div> 
+                            <!-- Add Pagination -->
+                        <div class="swiper-pagination"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p class="rewiews-sename">пришлите Ваш отзыв и мы разместим его на сайте</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section contacts">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h3 class="section-title contacts-title">
+                        Контакты
+                    </h3>
+                </div>
+                <div class="col-lg-3 col-md-3">
+                    <div class="contacts-block">
+                        <a href="tel:+7(982)-921-24-41" class="contacts-link">
+                            <img src="./img/contacts/phone.png" alt="" class="contacts-img">
+                            <p class="contacts-name">8 (982)-921-24-41</p>
+                        </a>
+                        <a href="mailto:Budetsdel@gmail.com" class="contacts-link">
+                            <img src="./img/contacts/mail.png" alt="" class="contacts-img">
+                            <p class="contacts-name">Budetsdel@gmail.com</p>
+                        </a>
+                        <a href="#" class="contacts-link">
+                            <img src="./img/contacts/vk.png" alt="" class="contacts-img">
+                            <p class="contacts-name">BudetSdel</p>
+                        </a>
+                        <a href="https://instagram.com/budetsdel?igshid=q3mf0nnyewlp" class="contacts-link">
+                            <img src="./img/contacts/instagram.png" alt="" class="contacts-img">
+                            <p class="contacts-name">budetsdel</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-3 order-3 order-md-2">
+                    <div class="contacts-block contacts-block-two">
+                        <a href="tel:+7(912)977-77-61" class="contacts-link">
+                            <img src="./img/contacts/phone.png" alt="" class="contacts-img">
+                            <p class="contacts-name">8 (912) 977-77-61</p>
+                        </a>
+                        <a href="https://wa.me/+73452539850" class="contacts-link">
+                            <img src="./img/contacts/whatsup.png" alt="" class="contacts-img">
+                            <p class="contacts-name">8(3452)53-98-50</p>
+                        </a>
+                        <a href="tg://resolve?domain=nikname" class="contacts-link">
+                            <img src="./img/contacts/telega.png" alt="" class="contacts-img">
+                            <p class="contacts-name">8(3452)53-98-50</p>
+                        </a>
+                        <a href="viber://add?number=83452539850" class="contacts-link">
+                            <img src="./img/contacts/viber.png" alt="" class="contacts-img">
+                            <p class="contacts-name">8(3452)53-98-50</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 order-2 order-md-3">
+                    <img src="./img/contacts/bg.png" alt="" class="contacts-bg">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <section class="footer-st">
+            <div class="container">
+                <div class="footer-first">
+                    <img src="./img/footer/logo.png" alt="" class="footer-logo">
+                    <div class="footer-linked">
+                        <a href="#" class="footer-link">
+                            <img src="./img/footer/vk.png" alt="" class="footer-img">
+                        </a>
+                        <a href="tg://resolve?domain=nikname" class="footer-link">
+                        <img src="./img/footer/telega.png" alt="" class="footer-img"></a>
+                        <a href="https://wa.me/+73452539850" class="footer-link">
+                        <img src="./img/footer/whatsup.png" alt="" class="footer-img"></a>
+                        <a href="tel:+7(982)-921-24-41" class="footer-link footer-link-two">
+                            <img src="./img/footer/phone.png" alt="" class="footer-img">
+                            <p class="footer-paragraph">8 (982)-921-24-41</p>
+                        </a>
+                        <a href="tel:+7(912)977-77-61" class="footer-link">
+                            <img src="./img/footer/phone.png" alt="" class="footer-img">
+                            <p class="footer-paragraph">8 (912) 977-77-61</p>
+                        </a>
+                    </div>
+                    <div class="footer-linked-first">
+                        <a href="tel:+7(982)-921-24-41" class="footer-link footer-link-two">
+                            <img src="./img/footer/phone.png" alt="" class="footer-img">
+                            <p class="footer-paragraph">8 (982)-921-24-41</p>
+                        </a>
+                        <a href="tel:+7(912)977-77-61" class="footer-link">
+                            <img src="./img/footer/phone.png" alt="" class="footer-img">
+                            <p class="footer-paragraph">8 (912) 977-77-61</p>
+                        </a>
+                        <div class="footer-linked-twice">
+                            <a href="#" class="footer-link">
+                                <img src="./img/footer/vk.png" alt="" class="footer-img">
+                            </a>
+                            <a href="tg://resolve?domain=nikname" class="footer-link">
+                            <img src="./img/footer/telega.png" alt="" class="footer-img"></a>
+                            <a href="https://wa.me/+73452539850" class="footer-link">
+                            <img src="./img/footer/whatsup.png" alt="" class="footer-img"></a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <section class="footer-es">
+            <div class="container">
+                <div class="footer-twice">
+                    <a href="https://goryachenok.ru/" class="footer-twice-paragraph footer-twice-paragraph-two">site by Nikita Goryachev</a>
+                    <p class="footer-twice-paragraph">copyright 2020</p>
+                </div>
+            </div>
+        </section>
+    </footer>
+
+    <script src="./js/jquery-3.0.0.min.js"></script>
+    <script src="./js/swiper.min.js"></script>
+    <script src="./js/script.js"></script>
 
 </body>
 </html>
