--- a/washer.html
+++ b/washer.html
@@ -229,6 +229,18 @@
         </div>
     </section>
 
+    <section class="section diskond">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2 class="diskond-title">Скидка 20% пенсионерам и многодетным семьям</h2>
+                </div>
+            </div>
+        </div>
+    </section>
+
+   
+
 
 
     <section class="section plans ">
@@ -282,6 +294,43 @@
                             <button class="plans-block-form-button button">Вызвать мастера</button>
                             <p class="plans-block-form-span"> *Нажимая на кнопку «Вызвать мастера», Вы даёте своё согласие на обработку персональных данных.</p>
                         </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section whyworks">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h5 class="section-title whyworks-title">Как мы работаем</h5>
+                    <div class="whyworks-block">
+                        <img src="./img/whyworks/bg.png" alt="" class="whyworks-img">
+                        <img src="./img/whyworks/bg_mobile.svg" alt="" class="whyworks-img-two">
+                    </div>
+                    <div class="whyworks-button-block">
+                        <button class="button popup-btn whyworks-button">Вызвать мастера</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section marks">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h3 class="section-title marks-title">
+                        Какие марки мы ремонтируем 
+                    </h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="marks-block">
+                        <img src="./img/marks/bg.svg" alt="" class="marks-img">
+                        <img src="./img/marks/bg_mobile.svg" alt="" class="marks-img-two">
                     </div>
                 </div>
             </div>
