--- a/dryer.html
+++ b/dryer.html
@@ -43,12 +43,12 @@
         </div>
     </header>
 
-    <section class="washer-first_window section">
+    <section class="dryer-first_window section">
         <div class="container">
             <div class="row">
                <div class="col-lg-7 col-md-7 col-10">
                 <span class="home-first_window-span">Выезд в течении получаса</span>
-                <h1 class="home-first_window-title">Ремонт стиральных машин в Тюмени в день обращения</h1>
+                <h1 class="home-first_window-title">Ремонт сушильных машин в Тюмени в день обращения</h1>
                 <p class="home-first_window-paragraph">Вернём Вам привычный бытовой комфорт и распорядок дня. Быстро устраним любые неисправности и поломки.</p>
                 <div class="button-block">
                     <button class="button home-first_window-button popup-btn">Вызвать мастера</button>
