--- a/ice.html
+++ b/ice.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/swiper.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/ice.css">
     <link rel="icon" href="img/logo.png">
     
     <title>Будет сделано</title>
@@ -43,12 +44,13 @@
         </div>
     </header>
 
-    <section class="washer-first_window section">
+    <section class="ice-first_window section">
         <div class="container">
             <div class="row">
                <div class="col-lg-7 col-md-7 col-10">
                 <span class="home-first_window-span">Выезд в течении получаса</span>
-                <h1 class="home-first_window-title">Ремонт стиральных машин в Тюмени в день обращения</h1>
+                <h1 class="home-first_window-title">Ремонт холодильников
+                    в Тюмени в день обращения</h1>
                 <p class="home-first_window-paragraph">Вернём Вам привычный бытовой комфорт и распорядок дня. Быстро устраним любые неисправности и поломки.</p>
                 <div class="button-block">
                     <button class="button home-first_window-button popup-btn">Вызвать мастера</button>
@@ -93,6 +95,17 @@
             </div>
         </div>
     </section>
+    
+    <section class="section service">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h3 class="diskond-title service-title">Не спешите везти его в сервисный центр или покупать новый!</h3>
+                    <p class="service-paragraph">В 95% случаев вам может помочь ремонт холодильников в Тюмени  на дому!<br> Это не только поможет сэкономить ваше время, но и даст возможность<br> сохранить семейный бюджет.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <section class="section problems">
         <div class="container">
@@ -109,25 +122,26 @@
                             <img src="./img/problems/power.png" alt="" class="problems-img">
                             <h5 class="problems-name">Не включается</h5>
                         </div>
-                        <p class="problems-paragraph">Сломано устройство блокировки люка<br>
-                            Сломалась кнопка «старт/стоп»<br>
-                            Неисправен фильтр помех (ФПС)<br>
-                            Вышел из строя программатор (КСМА)<br>
-                            Неисправность электронного модуля</p>
+                        <p class="problems-paragraph problems-paragraph-two">
+                            Неисправность мотор-компрессора<br>
+                            Сбой в работе модуля управления<br>
+                            Выход из строя термостата<br>
+                            Поломка воздушного датчика<br>
+                            Неисправность пускозащитного реле</p>
                         <button class="button problems-button popup-btn">У меня такая проблема</button>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-6">
                     <div class="problems-block">
                         <div class="problems-bloking">
-                            <img src="./img/problems/sliv.png" alt="" class="problems-img">
-                            <h5 class="problems-name">Не сливает воду</h5>
+                            <img src="./img/problems/notpower.png" alt="" class="problems-img">
+                            <h5 class="problems-name">Не отключается</h5>
                         </div>
-                        <p class="problems-paragraph">Засор в фильтре или патрубке<br>
-                            Сломался сливной насос (помпа)<br>
-                            Вышел из строя управляющий модуль<br>
-                            Сломан датчик уровня воды<br>
-                            Повреждена плата</p>
+                        <p class="problems-paragraph ">
+                            Плохо закрывается дверца<br>
+                            Неисправность терморугятора<br>
+                            Износ резинового уплотнителя<br>
+                            Утечка фреона, хладагента</p>
                         <button class="button problems-button popup-btn">У меня такая проблема</button>
                     </div>
                 </div>
@@ -135,13 +149,28 @@
                     <div class="problems-block">
                         <div class="problems-bloking">
                             <img src="./img/problems/water.png" alt="" class="problems-img">
-                            <h5 class="problems-name">Течёт вода</h5>
+                            <h5 class="problems-name">Подтекает вода</h5>
                         </div>
-                        <p class="problems-paragraph">Протекает сливной/заливной шланг<br>
-                            Протекает патрубок<br>
-                            Засор в дозаторе для моющих средств<br>
-                            Повреждена манжета люка<br>
-                            Протекает сливной насос
+                        <p class="problems-paragraph problems-paragraph-two">
+                            Засор в дренажном отверстии холодильной или морозильной камеры<br>
+                            Износ резинового уплотнителя<br>
+                            Поломка трубки слива<br>
+                            Проблема в термостате, компрессоре
+                            </p>
+                        <button class="button problems-button popup-btn">У меня такая проблема</button>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-6">
+                    <div class="problems-block">
+                        <div class="problems-bloking">
+                            <img src="./img/problems/ice.png" alt="" class="problems-img">
+                            <h5 class="problems-name">Сильно морозит</h5>
+                        </div>
+                        <p class="problems-paragraph problems-paragraph-two">Износ уплотнительной резины<br>
+                            Засор дренажного отверстия<br>
+                            Засор в капиллярной системе<br>
+                            Сломан терморегулятор<br>
+                            Неисправность воздушного датчика
                             </p>
                         <button class="button problems-button popup-btn">У меня такая проблема</button>
                     </div>
@@ -150,13 +179,12 @@
                     <div class="problems-block">
                         <div class="problems-bloking">
                             <img src="./img/problems/temp.png" alt="" class="problems-img">
-                            <h5 class="problems-name">Не греет воду</h5>
+                            <h5 class="problems-name">Не морозит</h5>
                         </div>
-                        <p class="problems-paragraph">Вышел из строя ТЭН<br>
-                            Сломался датчик температуры<br>
-                            Вышел из строя электронный модуль<br>
-                            Сломался программатор (КСМА)<br>
-                            Повреждена электронная плата<br>
+                        <p class="problems-paragraph ">Засор трубки системы хладогенерации<br>
+                            Утечка фреона<br>
+                            Сломанный компрессор<br>
+                            Обмёрзший вентилятор<br>
                             </p>
                         <button class="button problems-button popup-btn">У меня такая проблема</button>
                     </div>
@@ -164,42 +192,28 @@
                 <div class="col-lg-4 col-md-4 col-6">
                     <div class="problems-block">
                         <div class="problems-bloking">
-                            <img src="./img/problems/djim.png" alt="" class="problems-img">
-                            <h5 class="problems-name">Не отжимает</h5>
+                            <img src="./img/problems/shnow.png" alt="" class="problems-img">
+                            <h5 class="problems-name">Образуется снежная шуба</h5>
                         </div>
-                        <p class="problems-paragraph problems-paragraph-two">Сломан КСМА / электронный управляющий модуль<br>
-                            Неисправность мотора<br>
-                            Растяжение приводного ремня<br>
-                            Неисправность датчика температуры (термостата)<br>
-                            </p>
+                        <p class="problems-paragraph problems-paragraph-two">
+                            Плохо закрывается дверца<br>
+                            Износ резинового уплотнителя<br>
+                            Неисправность терморегулятора<br>
+                            Микротрещины в холодильной системе</p>
                         <button class="button problems-button popup-btn">У меня такая проблема</button>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-6">
                     <div class="problems-block">
                         <div class="problems-bloking">
-                            <img src="./img/problems/spinning.png" alt="" class="problems-img">
-                            <h5 class="problems-name">Не крутится барабан</h5>
+                            <img src="./img/problems/light.png" alt="" class="problems-img">
+                            <h5 class="problems-name">Не работает подсветка</h5>
                         </div>
-                        <p class="problems-paragraph">Обрыв/ослабление приводного ремня<br>
-                            Износ щёток электродвигателя<br>
-                            Сломался программатор (КСМА)<br>
-                            Неисправен управляющий модуль<br>
-                            Не работает электродвигатель</p>
-                        <button class="button problems-button popup-btn">У меня такая проблема</button>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-6">
-                    <div class="problems-block">
-                        <div class="problems-bloking">
-                            <img src="./img/problems/open.png" alt="" class="problems-img">
-                            <h5 class="problems-name">Не открывается люк</h5>
-                        </div>
-                        <p class="problems-paragraph">Сломалась ручка люка<br>
-                            Сломано устройство блокировки люка<br>
-                            Неисправен управляющий модуль<br>
-                            Сломался программатор (КСМА)<br>
-                            Неисправен фильтр помех (ФПС)</p>
+                        <p class="problems-paragraph problems-paragraph-two">Перегорела лампочка<br>
+                            Неисправность электропроводки<br>
+                            Поломка патрона лампочки<br>
+                            Поломка кнопки-выключателя<br>
+                            Неисправность терморегулятора</p>
                         <button class="button problems-button popup-btn">У меня такая проблема</button>
                     </div>
                 </div>
@@ -207,13 +221,12 @@
                     <div class="problems-block">
                         <div class="problems-bloking">
                             <img src="./img/problems/noise.png" alt="" class="problems-img">
-                            <h5 class="problems-name">Сильно шумит</h5>
+                            <h5 class="problems-name">Шумит и вибрирует</h5>
                         </div>
-                        <p class="problems-paragraph">Сломалась ручка люка<br>
-                            Сломано устройство блокировки люка<br>
-                            Неисправен управляющий модуль<br>
-                            Сломался программатор (КСМА)<br>
-                            Неисправен фильтр помех (ФПС)</p>
+                        <p class="problems-paragraph ">Стандартная работа компрессора<br>
+                            Шумная работы системы No Frost<br>
+                            Проблема в реле<br>
+                            Проблема в вентиляторе<br></p>
                         <button class="button problems-button popup-btn">У меня такая проблема</button>
                     </div>
                 </div>
@@ -223,6 +236,38 @@
                         <p class="problems-sename">
                             Не пытайтесь самостоятельно исправить поломку, если не обладаете должными навыками. Это может привести к ухудшению работы или к уменьшению срока службы Вашей стиральной машины.
                         </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section remont_out">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h3 class="section-title remont_out-title">Мы осуществляем выездной ремонт холодильников<br>
+                        (на дому и на территории заказчика)
+                        следущих типов</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-md-4 col-6">
+                    <div class="remont_out-block">
+                        <img src="./img/remontout/heart.png" alt="" class="remont_out-img">
+                        <p class="remont_out-name">Домашние</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-6">
+                    <div class="remont_out-block">
+                        <img src="./img/remontout/home.png" alt="" class="remont_out-img">
+                        <p class="remont_out-name">Торговые</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-6 offset-3 offset-md-0">
+                    <div class="remont_out-block">
+                        <img src="./img/remontout/zavod.png" alt="" class="remont_out-img">
+                        <p class="remont_out-name">Промышленные</p>
                     </div>
                 </div>
             </div>
