--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-3 col-md-3 col-12">
-                    <a href="#" class="home-services-link">
+                    <a href="./ice.html" class="home-services-link">
                         <div class="home-services-block">
                             <img src="./img/home/services/first.png" alt="" class="home-services-img">
                             <img src="./img/home/services/white/first.png" alt="" class="home-services-img_white">
@@ -120,7 +120,7 @@
                     </a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-12">
-                    <a href="#" class="home-services-link">
+                    <a href="./dishwasher.html" class="home-services-link">
                         <div class="home-services-block">
                             <img src="./img/home/services/three.png" alt="" class="home-services-img">
                             <img src="./img/home/services/white/three.png" alt="" class="home-services-img_white">
@@ -130,7 +130,7 @@
                     </a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-12">
-                    <a href="#" class="home-services-link">
+                    <a href="./dryer.html" class="home-services-link">
                         <div class="home-services-block">
                             <img src="./img/home/services/four.png" alt="" class="home-services-img">
                             <img src="./img/home/services/white/four.png" alt="" class="home-services-img_white">
@@ -231,6 +231,60 @@
                 <div class="col-lg-12">
                     <div class="swiper-container">
                         <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-lg-5 offset-lg-1 col-12 offset-0">
+                                            <div class="rewiews-block">
+                                                <h5 class="rewiews-name">Илья Коровин</h5>
+                                                <p class="rewiews-paragraph">Более того, нормальное распределение отображает равновероятный разрыв функции, откуда следует доказываемое равенство. Более того, расходящийся ряд естественно искажает скачок функции. График функции притягивает нормальный график функции многих переменных.</p>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-5 col-12 offset-0">
+                                            <div class="rewiews-block">
+                                                <h5 class="rewiews-name">Илья Коровин</h5>
+                                                <p class="rewiews-paragraph">Более того, нормальное распределение отображает равновероятный разрыв функции, откуда следует доказываемое равенство. Более того, расходящийся ряд естественно искажает скачок функции. График функции притягивает нормальный график функции многих переменных.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-lg-5 offset-lg-1 col-12 offset-0">
+                                            <div class="rewiews-block">
+                                                <h5 class="rewiews-name">Илья Коровин</h5>
+                                                <p class="rewiews-paragraph">Более того, нормальное распределение отображает равновероятный разрыв функции, откуда следует доказываемое равенство. Более того, расходящийся ряд естественно искажает скачок функции. График функции притягивает нормальный график функции многих переменных.</p>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-5 col-12 offset-0">
+                                            <div class="rewiews-block">
+                                                <h5 class="rewiews-name">Илья Коровин</h5>
+                                                <p class="rewiews-paragraph">Более того, нормальное распределение отображает равновероятный разрыв функции, откуда следует доказываемое равенство. Более того, расходящийся ряд естественно искажает скачок функции. График функции притягивает нормальный график функции многих переменных.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-lg-5 offset-lg-1 col-12 offset-0">
+                                            <div class="rewiews-block">
+                                                <h5 class="rewiews-name">Илья Коровин</h5>
+                                                <p class="rewiews-paragraph">Более того, нормальное распределение отображает равновероятный разрыв функции, откуда следует доказываемое равенство. Более того, расходящийся ряд естественно искажает скачок функции. График функции притягивает нормальный график функции многих переменных.</p>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-5 col-12 offset-0">
+                                            <div class="rewiews-block">
+                                                <h5 class="rewiews-name">Илья Коровин</h5>
+                                                <p class="rewiews-paragraph">Более того, нормальное распределение отображает равновероятный разрыв функции, откуда следует доказываемое равенство. Более того, расходящийся ряд естественно искажает скачок функции. График функции притягивает нормальный график функции многих переменных.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="swiper-slide">
                                 <div class="container">
                                     <div class="row">
