--- a/dishwasher.html
+++ b/dishwasher.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/swiper.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/dishwash.css">
     <link rel="icon" href="img/logo.png">
     
     <title>Будет сделано</title>
@@ -43,12 +44,12 @@
         </div>
     </header>
 
-    <section class="washer-first_window section">
+    <section class="dishwasher-first_window section">
         <div class="container">
             <div class="row">
                <div class="col-lg-7 col-md-7 col-10">
                 <span class="home-first_window-span">Выезд в течении получаса</span>
-                <h1 class="home-first_window-title">Ремонт стиральных машин в Тюмени в день обращения</h1>
+                <h1 class="home-first_window-title">Посудомоечная машина сломалась, а гора посуды срывает все планы?</h1>
                 <p class="home-first_window-paragraph">Вернём Вам привычный бытовой комфорт и распорядок дня. Быстро устраним любые неисправности и поломки.</p>
                 <div class="button-block">
                     <button class="button home-first_window-button popup-btn">Вызвать мастера</button>
@@ -109,25 +110,24 @@
                             <img src="./img/problems/power.png" alt="" class="problems-img">
                             <h5 class="problems-name">Не включается</h5>
                         </div>
-                        <p class="problems-paragraph">Сломано устройство блокировки люка<br>
-                            Сломалась кнопка «старт/стоп»<br>
-                            Неисправен фильтр помех (ФПС)<br>
-                            Вышел из строя программатор (КСМА)<br>
-                            Неисправность электронного модуля</p>
+                        <p class="problems-paragraph">
+                            Засор сливного или заливного шланга<br>
+                            Засор фильтра<br>
+                            Выход из строя датчика уровня воды<br>
+                            Неисправность УБЛ (устройство блокировки люка)</p>
                         <button class="button problems-button popup-btn">У меня такая проблема</button>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-6">
                     <div class="problems-block">
                         <div class="problems-bloking">
-                            <img src="./img/problems/sliv.png" alt="" class="problems-img">
-                            <h5 class="problems-name">Не сливает воду</h5>
+                            <img src="./img/problems/notpower.png" alt="" class="problems-img">
+                            <h5 class="problems-name">Отключается</h5>
                         </div>
-                        <p class="problems-paragraph">Засор в фильтре или патрубке<br>
-                            Сломался сливной насос (помпа)<br>
-                            Вышел из строя управляющий модуль<br>
-                            Сломан датчик уровня воды<br>
-                            Повреждена плата</p>
+                        <p class="problems-paragraph problems-paragraph-two">Сбой в системе питания, вызванный перегрузкой в электросети<br>
+                            Проблема с сетевым фильтром<br>
+                            Неисправен нагревательный элемент или термодатчик<br>
+                            Неисправен управляющий модуль</p>
                         <button class="button problems-button popup-btn">У меня такая проблема</button>
                     </div>
                 </div>
@@ -135,13 +135,41 @@
                     <div class="problems-block">
                         <div class="problems-bloking">
                             <img src="./img/problems/water.png" alt="" class="problems-img">
-                            <h5 class="problems-name">Течёт вода</h5>
+                            <h5 class="problems-name">Протекает</h5>
                         </div>
-                        <p class="problems-paragraph">Протекает сливной/заливной шланг<br>
-                            Протекает патрубок<br>
-                            Засор в дозаторе для моющих средств<br>
-                            Повреждена манжета люка<br>
-                            Протекает сливной насос
+                        <p class="problems-paragraph">Засор сливного или заливного шланга<br>
+                            Повреждение сливного или заливного шланга<br>
+                            Неисправность заливного клапана<br>
+                            Выход из строя датчика уровня воды
+                            </p>
+                        <button class="button problems-button popup-btn">У меня такая проблема</button>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-6">
+                    <div class="problems-block">
+                        <div class="problems-bloking">
+                            <img src="./img/problems/hand.png" alt="" class="problems-img">
+                            <h5 class="problems-name">Плохо моет</h5>
+                        </div>
+                        <p class="problems-paragraph problems-paragraph-two">Засор системы слива<br>
+                            Засор разбрызгивателя<br>
+                            Поломка нагревательного элемента<br>
+                            Поломка циркуляционного насоса<br>
+                            Выход из строя модуля управления
+                            </p>
+                        <button class="button problems-button popup-btn">У меня такая проблема</button>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-6">
+                    <div class="problems-block">
+                        <div class="problems-bloking">
+                            <img src="./img/problems/djim.png" alt="" class="problems-img">
+                            <h5 class="problems-name">Не сушит</h5>
+                        </div>
+                        <p class="problems-paragraph ">Неисправность термодатчика<br>
+                            Неисправность вентилятора<br>
+                            Поломка электронного блока<br>
+                            Вышел из строя ТЭН                            
                             </p>
                         <button class="button problems-button popup-btn">У меня такая проблема</button>
                     </div>
@@ -152,68 +180,37 @@
                             <img src="./img/problems/temp.png" alt="" class="problems-img">
                             <h5 class="problems-name">Не греет воду</h5>
                         </div>
-                        <p class="problems-paragraph">Вышел из строя ТЭН<br>
-                            Сломался датчик температуры<br>
-                            Вышел из строя электронный модуль<br>
-                            Сломался программатор (КСМА)<br>
-                            Повреждена электронная плата<br>
-                            </p>
+                        <p class="problems-paragraph problems-paragraph-two">Загрязнение фильтра<br>
+                            Вышел из строя управляющий модуль<br>
+                            Вышел из строя датчик контроля температуры<br>
+                            Сгорел ТЭН</p>
                         <button class="button problems-button popup-btn">У меня такая проблема</button>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-6">
                     <div class="problems-block">
                         <div class="problems-bloking">
-                            <img src="./img/problems/djim.png" alt="" class="problems-img">
-                            <h5 class="problems-name">Не отжимает</h5>
+                            <img src="./img/problems/sliwtwo.png" alt="" class="problems-img">
+                            <h5 class="problems-name">Не сливает воду</h5>
                         </div>
-                        <p class="problems-paragraph problems-paragraph-two">Сломан КСМА / электронный управляющий модуль<br>
-                            Неисправность мотора<br>
-                            Растяжение приводного ремня<br>
-                            Неисправность датчика температуры (термостата)<br>
-                            </p>
+                        <p class="problems-paragraph">Загрязнение сливного насоса<br>
+                            Поломка модуля управления<br>
+                            Повреждение датчика уровня воды<br>
+                            Засор фильтра<br>
+                            Перегиб шланга слива</p>
                         <button class="button problems-button popup-btn">У меня такая проблема</button>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-6">
                     <div class="problems-block">
                         <div class="problems-bloking">
-                            <img src="./img/problems/spinning.png" alt="" class="problems-img">
-                            <h5 class="problems-name">Не крутится барабан</h5>
+                            <img src="./img/problems/hand_two.png" alt="" class="problems-img">
+                            <h5 class="problems-name">Не набирает воду</h5>
                         </div>
-                        <p class="problems-paragraph">Обрыв/ослабление приводного ремня<br>
-                            Износ щёток электродвигателя<br>
-                            Сломался программатор (КСМА)<br>
-                            Неисправен управляющий модуль<br>
-                            Не работает электродвигатель</p>
-                        <button class="button problems-button popup-btn">У меня такая проблема</button>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-6">
-                    <div class="problems-block">
-                        <div class="problems-bloking">
-                            <img src="./img/problems/open.png" alt="" class="problems-img">
-                            <h5 class="problems-name">Не открывается люк</h5>
-                        </div>
-                        <p class="problems-paragraph">Сломалась ручка люка<br>
-                            Сломано устройство блокировки люка<br>
-                            Неисправен управляющий модуль<br>
-                            Сломался программатор (КСМА)<br>
-                            Неисправен фильтр помех (ФПС)</p>
-                        <button class="button problems-button popup-btn">У меня такая проблема</button>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-6">
-                    <div class="problems-block">
-                        <div class="problems-bloking">
-                            <img src="./img/problems/noise.png" alt="" class="problems-img">
-                            <h5 class="problems-name">Сильно шумит</h5>
-                        </div>
-                        <p class="problems-paragraph">Сломалась ручка люка<br>
-                            Сломано устройство блокировки люка<br>
-                            Неисправен управляющий модуль<br>
-                            Сломался программатор (КСМА)<br>
-                            Неисправен фильтр помех (ФПС)</p>
+                        <p class="problems-paragraph">Засор фильтра впускного клапана<br>
+                            Подающий патрубок сжат или придавлен<br>
+                            Сломан блок управления<br>
+                            Неисправность функции «аквастоп»</p>
                         <button class="button problems-button popup-btn">У меня такая проблема</button>
                     </div>
                 </div>
