--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
                         <li><a href="javascript://0"  onclick="slowScroll('#rewiews')"   class="header__link">Отзывы</a></li>
                         <li><a href="https://vk.com/budetsdel" class="header-link"><img src="./img/header/vk.png" alt="" class="header-link-img-two"></a></li>
                         <li><a href="tg://resolve?domain=@budetsdel" class="header-link"><img src="./img/header/telega.png" alt="" class="header-link-img-two"></a></li>
-                        <li><a href="https://wa.me/+73452539850" class="header-link"><img src="./img/header/whatsup.png" alt="" class="header-link-img-two"></a></li>
+                        <li><a href="https://wa.me/+7(982)-921-24-41" class="header-link"><img src="./img/header/whatsup.png" alt="" class="header-link-img-two"></a></li>
                         <li><a href="tel:8(982)921-24-41" class="header-link"><img src="./img/header/phone.png" alt="" class="header-link-img"><p class="header-link-span">8(929)269-59-94</p></a></li>
                         <li><a href="tel:8(912)977-77-61" class="header-link"><img src="./img/header/phone.png" alt="" class="header-link-img"><p class="header-link-span">8(912)977-77-61</p></a></li>
                         <li class="header-link"><a href="https://vk.com/budetsdel" class="header-link header-link-mobile"><img src="./img/header/vk.png" alt="" class="header-link-img"></a>
                             <a href="tg://resolve?domain=@budetsdel" class="header-link header-link-mobile"><img src="./img/header/telega.png" alt="" class="header-link-img"></a>
-                            <a href="https://wa.me/+73452539850" class="header-link header-link-mobile"><img src="./img/header/whatsup.png" alt="" class="header-link-img"></a></li>
+                            <a href="https://wa.me/+7(982)-921-24-41" class="header-link header-link-mobile"><img src="./img/header/whatsup.png" alt="" class="header-link-img"></a></li>
                     </ul>
                 </nav>
                 
@@ -354,7 +354,7 @@
                             <img src="./img/contacts/phone.png" alt="" class="contacts-img">
                             <p class="contacts-name">8 (912) 977-77-61</p>
                         </a>
-                        <a href="https://wa.me/+73452539850" class="contacts-link">
+                        <a href="https://wa.me/+7(982)-921-24-4" class="contacts-link">
                             <img src="./img/contacts/whatsup.png" alt="" class="contacts-img">
                             <p class="contacts-name">8(3452)53-98-50</p>
                         </a>
@@ -362,7 +362,7 @@
                             <img src="./img/contacts/telega.png" alt="" class="contacts-img">
                             <p class="contacts-name">8(3452)53-98-50</p>
                         </a>
-                        <a href="viber://add?number=+73452539850" class="contacts-link">
+                        <a href="viber://add?number=+7(982)-921-24-41" class="contacts-link">
                             <img src="./img/contacts/viber.png" alt="" class="contacts-img">
                             <p class="contacts-name">8(3452)53-98-50</p>
                         </a>
@@ -412,7 +412,7 @@
                             </a>
                             <a href="tg://resolve?domain=@budetsdel" class="footer-link">
                             <img src="./img/footer/telega.png" alt="" class="footer-img"></a>
-                            <a href="https://wa.me/+73452539850" class="footer-link">
+                            <a href="https://wa.me/+7(982)-921-24-41" class="footer-link">
                             <img src="./img/footer/whatsup.png" alt="" class="footer-img"></a>
                         </div>
                     </div>
