--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
                             <img src="./img/contacts/telega.png" alt="" class="contacts-img">
                             <p class="contacts-name">8(3452)53-98-50</p>
                         </a>
-                        <a href="viber://add?number=+7(982)-921-24-41" class="contacts-link">
+                        <a href="viber://add?number=89829212441" class="contacts-link">
                             <img src="./img/contacts/viber.png" alt="" class="contacts-img">
                             <p class="contacts-name">8(3452)53-98-50</p>
                         </a>
