--- a/index.html
+++ b/index.html
@@ -362,9 +362,9 @@
                             <img src="./img/contacts/telega.png" alt="" class="contacts-img">
                             <p class="contacts-name">8(3452)53-98-50</p>
                         </a>
-                        <a  href="viber://chat?number=8(3452)53-98-50" class="contacts-link">
+                        <a  href="viber://chat?number=79129777761" class="contacts-link">
                             <img src="./img/contacts/viber.png" alt="" class="contacts-img">
-                            <p class="contacts-name">8(3452)53-98-50</p>
+                            <p class="contacts-name">8 (912) 977-77-61</p>
                         </a>
                     </div>
                 </div>
